--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/reset.css">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
@@ -14,8 +16,7 @@
         crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+
     <title>Train Scheduler</title>
 </head>
 
@@ -26,22 +27,22 @@
             <h3 style="text-align:center">Choo Choo. Chee Chee.</h3>
         </div>
         <div class="container" style="padding:20px">
-                <div class='panel panel-primary'>
-                    <div class='panel-heading'>Current Train Schedule
-                    </div>
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>Train Name</th>
-                                <th>Destination</th>
-                                <th>Frequency (min)</th>
-                                <th>Next Arrival</th>
-                                <th>Minutes Away</th>
-                            </tr>
-                        </thead>
-                    </table>
+            <div class='panel panel-primary'>
+                <div class='panel-heading'>Current Train Schedule
                 </div>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Train Name</th>
+                            <th>Destination</th>
+                            <th>Frequency (min)</th>
+                            <th>Next Arrival</th>
+                            <th>Minutes Away</th>
+                        </tr>
+                    </thead>
+                </table>
             </div>
+        </div>
         <div class="container">
             <div class='panel panel-primary'>
                 <div class='panel-heading'>Add Train
@@ -57,7 +58,7 @@
                     </div>
                     <div class="form-group">
                         <label for="first">First Train Time (HH:mm - military time)</label>
-                        <input type="date" class="form-control" id="first-input">
+                        <input type="time" class="form-control" id="first-input">
                     </div>
                     <div class="form-group">
                         <label for="frequency">Frequency (min)</label>
@@ -67,6 +68,15 @@
             </div>
         </div>
     </div>
+    <script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+   
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+        <script src="assets/javascript/app.js"></script>
+
+
 </body>
 
 </html>
