--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                             <th>Minutes Away</th>
                         </tr>
                     </thead>
+                    <!-- <tbody>
+                       
+                    </tbody> -->
                 </table>
             </div>
         </div>
