--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                             <th>Minutes Away</th>
                         </tr>
                     </thead>
-                    <!-- <tbody>
+                    <tbody>
                        
-                    </tbody> -->
+                    </tbody>
                 </table>
             </div>
         </div>
